# dwarfpaper

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: clock.c  clock.h  cmdline.c  cmdline.h  colors.c  colors.h  fps.h  log.c  log.h  main.c  modes.c  modes.h  noise.c  noise.h  screen.c  screen.h  vga9x16.c  vga9x16.h  vga9x16.rc  vga9x16.res.h  window.c  window.h
src/mode/: pipes.c  pipes.h
src/modes/: cave.c  cave.h  forest.c  forest.h  pipes.c  pipes.h
